# DensityMatrixQuantumSimulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build-and-test.sh  dmqs.cpp  dmqs.h  dmqs_test.cpp  env.cpp  env.hpp  gates.cpp  gates.h  log.txt  test.txt  uppaal.cpp  uppaal.h  uppal.h
.githooks/: precommit
bindings/: CMakeLists.txt  uppaal.cpp  uppaal.h
cmake/: armadillo.cmake  nvblas.conf  spdlog.cmake
examples/: densecoding.cpp  densecoding2.cpp  floating.cpp  jiri.cpp  new_noise.cpp
include/dmqs/: channels.hpp  dmqs.hpp  gates.hpp
include/gates/: gates.hpp
include/uppaal/: uppaal.h
src/: CMakeLists.txt  channels.cpp  dmqs.cpp  dmqs.hpp  gates.cpp
src/gates/: gates.cpp  gates.hpp
tests/: CMakeLists.txt  channels_test.cpp  dmqs_test.cpp  gates_test.cpp  uppaal_test.cpp
